# shadow-ninja-monkey

./: ProjectHome.md
CPPNinjaMonkey/: CMakeLists.txt  building-boost-on-windows.txt  todo.txt
CPPNinjaMonkey/include/diag/: Trace.h
CPPNinjaMonkey/include/framework/: AutoResetEvent.h  CallQueue.h  Dispatcher.h
CPPNinjaMonkey/include/input/: Input.h
CPPNinjaMonkey/include/input/win32/: WindowsMessageInput.h
CPPNinjaMonkey/include/net/: Mediator.h  NetworkEndian.h  NetworkPacket.h  PeerServer.h
CPPNinjaMonkey/include/render/: GLU.h  RenderThreadContext.h  RenderWindow.h
CPPNinjaMonkey/include/render/windows/: WindowsRenderWindow.h
CPPNinjaMonkey/neon-0.29.3/: libneon.lib
CPPNinjaMonkey/php/: index.php
CPPNinjaMonkey/php/javascript/: debug.js
CPPNinjaMonkey/php/snm/: ajax.php  gamedb.inc
CPPNinjaMonkey/php/snm/css/: main.css
CPPNinjaMonkey/php/snm/javascript/: util.js
CPPNinjaMonkey/src/launch/: CMakeLists.txt
CPPNinjaMonkey/src/launch/debug/: App.cpp  App.h  CMakeLists.txt  Main.cpp  RenderWorker.cpp  RenderWorker.h
CPPNinjaMonkey/src/lib/: CMakeLists.txt
CPPNinjaMonkey/src/lib/diag/: Trace.cpp
CPPNinjaMonkey/src/lib/entity/: CMakeLists.txt
CPPNinjaMonkey/src/lib/framework/: CMakeLists.txt
CPPNinjaMonkey/src/lib/game/: CMakeLists.txt  GameLoop.cpp  GameLoop.h  GameNetworkPacketTranslator.cpp  GameNetworkPacketTranslator.h
CPPNinjaMonkey/src/lib/input/: CMakeLists.txt
CPPNinjaMonkey/src/lib/input/windows/: WindowsMessageInput.cpp
CPPNinjaMonkey/src/lib/math/: CMakeLists.txt  EdgeSorter.js  LightLayer.js  Point.h
CPPNinjaMonkey/src/lib/net/: CMakeLists.txt  HTTPClient.cpp  HTTPClient.h  JSONRPC.cpp  JSONRPC.h  Neon.cpp  Neon.h  NetworkPacket.h  NetworkPacketMarshaller.cpp  NetworkPacketMarshaller.h  PeerClient.cpp  PeerClient.h  PeerServer.cpp  PeerServerConnectionListener.cpp  PeerServerConnectionListener.h  PeerServerSession.cpp  PeerServerSession.h  Socket.cpp  Socket.h
CPPNinjaMonkey/src/lib/render/: CMakeLists.txt  RenderThreadContext.cpp  RenderWindow.cpp  RenderWorker.cpp
CPPNinjaMonkey/test/: CMakeLists.txt  Dispatcher.cpp  HTTPClient.cpp  JSONRPC.cpp  Main.cpp  Mediator.cpp  Point.cpp
P2PConnect/: Client.cs  MainForm.Designer.cs  MainForm.cs  P2PConnect.csproj  P2PConnect.sln  Program.cs  readme.txt
P2PConnect/Properties/: Resources.Designer.cs  Settings.Designer.cs
Spikes/Assets/Components/: SimpleProceduralGeometry.cs
Spikes/Assets/Materials/: Black ninja body.mat  GreenMarker.mat  OrangeMarker.mat  PlayerDummy.mat  White ninja body.mat  blood001.mat
Spikes/Assets/NetworkScripts/: ConnectGui.js  NetworkLevelLoad.cs  NetworkTestRPCCaller.cs
Spikes/Assets/Prefabs/: DirectConnectGUI.prefab  NetworkTestCapsule.prefab  NinjaCharacter.prefab
Spikes/Assets/Scenes/: CharacterMovement.unity  CollisionDetection.unity  LoadingScene.unity  NetworkTest.unity  Shaderstuff.unity  StandardNetworkLoader.unity  TestLevel.unity  TutorialSceneWorkingArea.unity
Spikes/Assets/Scripts/: BloodSplatBehavior.cs  ColliderSceneStartup.cs  DeathMenu.cs  FPSNinjaWalker.cs  GameHUD.cs  GameHUD.js  MainMenuGUI.cs  NetworkInstantiatePrefab.cs  NinjaAnimation.cs  NinjaBehaviour.cs  NinjaPokerAnimation.cs  PokerCollider.cs  RotateUsingInputAxes.cs  SplineInterpolator.cs
Spikes/Assets/Shaders/Floor/: Diffuseless.shader
Spikes/Assets/Textures/: Blood001.xcf
jorgenhs-does-haXe/: Jorgenhs-does-haXe.hxproj
oak-does-haxe/: ShadowNinjaMonkey.html  ShadowNinjaMonkey.hx  ShadowNinjaMonkey.swf
oak-does-javascript-and-canvas-tag/: .project
oak-does-javascript-and-canvas-tag/WebContent/: Shadows002.html
oak-does-javascript-and-canvas-tag/WebContent/js/: Edge.js  EdgeSorter.js  EdgeStack.js  LightCalculator.js  LightPolygon.js  Point.js  Scene.js
oak-does-javascript-and-canvas-tag/test/: AllTests.html
shadowport/: CCShadows.h  Point.h  Scene.cpp  main.m
shadowport/Classes/: CCShadows.h  CCShadows.mm  Edge.h  EdgePointReference.cpp  EdgeSorter.cpp  EdgeSorter.h  EdgeStack.h  HelloWorldScene.h  HelloWorldScene.m  LightCalculator.h  LightPolygon.h  Point.h  Scene.h  shadowportAppDelegate.h  shadowportAppDelegate.m
shadowport/shadowport.xcodeproj/: project.pbxproj
trunk/: grand-list-of-refactorings.txt  shadow-ninja-monkey-ideas-laurie.odt
trunk/CPPNinjaMonkey/: CMakeLists.txt  building-boost-on-windows.txt  iphone-compiling-on-windows-and-linux.txt  todo.txt
trunk/CPPNinjaMonkey/php/: ajax.php  debug.inc  gamedb.inc
trunk/CPPNinjaMonkey/src/: CMakeLists.txt
trunk/CPPNinjaMonkey/src/launch/debug/: App.cpp  CMakeLists.txt  Entity.cpp  Entity.h  Main.cpp  RenderWorker.cpp  RenderWorker.h
trunk/CPPNinjaMonkey/src/launch/debug/windows/: Main.cpp
trunk/CPPNinjaMonkey/src/lib/diag/: CMakeLists.txt  Trace.cpp
trunk/CPPNinjaMonkey/src/lib/framework/: CMakeLists.txt  CallQueue.cpp  DispatchThread.cpp  Dispatcher.cpp
trunk/CPPNinjaMonkey/src/lib/render/: CMakeLists.txt  RenderThreadContext.cpp  RenderThreadContextInternal.h  RenderWindow.cpp  RenderWorker.cpp
trunk/CPPNinjaMonkey/src/lib/render/windows/: WindowsRenderThreadContext.cpp  WindowsRenderThreadContextInternal.h  WindowsRenderWindow.cpp
trunk/CPPNinjaMonkey/test/: CMakeLists.txt  CallQueue.cpp  HTTPClient.cpp  JSONRPC.cpp
trunk/P2PConnect/: Client.cs
trunk/P2PConnect/Properties/: AssemblyInfo.cs
trunk/jorgenhs-does-haXe/src/: Test.hx
trunk/oak-does-haxe/: LightLayer.hx  LightSource.hx  Point.hx  PolyLineStack.hx  SortablePolyLine.hx  Vector.hx  compile.hxml
trunk/oak-does-javascript-and-canvas-tag/: .project
trunk/oak-does-javascript-and-canvas-tag/WebContent/: Shadows001.html
trunk/oak-does-javascript-and-canvas-tag/test/: AllTests.html
trunk/punch/: index.php
trunk/shadowport/: CCShadows.mm  Edge.cpp  EdgePointReference.h  EdgeSorter.h  LightCalculator.cpp  LightCalculator.h  Point.cpp
trunk/shadowport/Classes/: CCShadows.h  CCShadows.mm  Edge.h  EdgeSorter.h  EdgeStack.cpp  EdgeStack.h  HelloWorldScene.h  HelloWorldScene.m  LightCalculator.h  LightPolygon.cpp  MathExtra.h  Point.h  Scene.h
trunk/shadowport/shadowport.xcodeproj/: project.pbxproj
(+113 files in other folders)
